syntax = "proto3";
package movie.movie;

import "gogoproto/gogo.proto";
import "movie/movie/params.proto";
import "movie/movie/movie.proto";
import "movie/movie/review.proto";
import "movie/movie/stored_movie.proto";
import "movie/movie/stored_review.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "movie/x/movie/types";

// GenesisState defines the movie module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Movie movieList = 2 [(gogoproto.nullable) = false];
  uint64 movieCount = 3;
  repeated Review reviewList = 4 [(gogoproto.nullable) = false];
  uint64 reviewCount = 5;
  repeated StoredMovie storedMovieList = 6 [(gogoproto.nullable) = false];
  repeated StoredReview storedReviewList = 7 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
